--- a/sass/site/layout/_layout-flex.scss
+++ b/sass/site/layout/_layout-flex.scss
@@ -11,6 +11,15 @@ body{
 	display: block;
 }
 
+.ast-advanced-headers-layout{
+	&.ast-advanced-headers-layout-2{
+		.ast-container{
+			flex-direction: column;
+		}
+	}
+}
+
+
 @media ( min-width: 922px ){
 	.ast-container {
 		display: flex;
